refactor answer page to answer route and controller. Merge openAPI yaml files.
